G1: Abort weak reference processing if mark stack overflows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u20, 9
    • Component/s: hotspot
    • gc
    • b08

        In ConcurrentMark::weakRefsWork(), if the mark stack overflows we should not proceed to prune the string and symbol tables because we can't trust the g1_is_alive closure until marking has completed.

        Before starting to unlink elements from the string and symbol table we should check that has_overflown() is false.

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Per Liden (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: