8036673: G1: Abort weak reference processing if mark stack overflows

Reviewed-by: brutisso, tschatzl